tests/errors/vector-index-known-empty-dynamic.ari
fn read_empty(index: i64) -> i64 {
    var values: Vec[i64] = [1];
    values.clear();
    return values[index];
}

fn main() -> i64 {
    return read_empty(0);
}
